--- a/_sass/safari.scss
+++ b/_sass/safari.scss
@@ -3,10 +3,13 @@
 // Define defaults for each variable.
 
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$base-font-size:   16px !default;
+$base-font-size:   18px !default;
 $base-font-weight: 400 !default;
-$small-font-size:  $base-font-size * 0.875 !default;
+$small-font-size:  $base-font-size * 1 !default;
 $base-line-height: 1.5 !default;
+
+$title-font-family: "Text Hero Condensed", "Helvetica", "Arial", sans-serif !default;
+$title-font-weight: bold;
 
 $spacing-unit:     30px !default;
 
@@ -21,10 +24,10 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    800px !default;
+$content-width:    1140px !default;
 
-$on-palm:          600px !default;
-$on-laptop:        800px !default;
+$on-palm:          95% !default;
+$on-laptop:        1140px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
@@ -45,7 +48,7 @@ $on-laptop:        800px !default;
 
 // Import partials.
 @import
-  "minima/base",
-  "minima/layout",
-  "minima/syntax-highlighting"
+  "safari/base",
+  "safari/layout",
+  "safari/syntax-highlighting"
 ;
