--- a/_sass/safari/_base.scss
+++ b/_sass/safari/_base.scss
@@ -94,7 +94,10 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-  font-weight: $base-font-weight;
+  font-family: $title-font-family;
+  font-weight: $title-font-weight;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 
