--- a/_sass/safari.scss
+++ b/_sass/safari.scss
@@ -8,18 +8,18 @@ $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 1 !default;
 $base-line-height: 1.5 !default;
 
-$title-font-family: "Text Hero Condensed", "Helvetica", "Arial", sans-serif !default;
+$title-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $title-font-weight: bold;
 
 $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
-$background-color: #fdfdfd !default;
-$brand-color:      #2a7ae2 !default;
+$background-color: #D0CDD7 !default;
+$brand-color:      #115659 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
-$grey-color-dark:  darken($grey-color, 25%) !default;
+$grey-color-dark:  #115659 !default;
 
 $table-text-align: left !default;
 
