--- a/_sass/fonts.css
+++ b/_sass/fonts.css
@@ -1,33 +1,33 @@
 @font-face {
     font-family: 'Duospace';
-    src: url('./fonts/iAWriterDuospace-Bold.woff2') format('woff2');
+    src: url('./fonts/iAWriterQuattroS-Bold.woff2') format('woff2');
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Duospace';
-    src: url('./fonts/iAWriterDuospace-BoldItalic.woff2') format('woff2');
+    src: url('./fonts/iAWriterQuattroS-BoldItalic.woff2') format('woff2');
     font-weight: 700;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Duospace';
-    src: url('./fonts/iAWriterDuospace-Regular.woff2') format('woff2');
+    src: url('./fonts/iAWriterQuattroS-Regular.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Duospace';
-    src: url('./fonts/iAWriterDuospace-Italic.woff2') format('woff2');
+    src: url('./fonts/iAWriterQuattroS-Italic.woff2') format('woff2');
     font-weight: 400;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Sporting Grotesque';
-    src: url('./fonts/SportingGrotesque-Regular.otf') format('otf');
+    font-family: 'HK Grotesk';
+    src: url('./fonts/HKGrotesk-Regular.woff2') format('woff2');
     font-weight: 400;
 }
