--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -1,3 +1,16 @@
+/** navigation
+*
+*/
+
+#nav {
+  color: $grey-color-light;
+  text-align: center;
+  z-index: 9999;
+  position: fixed;
+  top: $spacing-unit;
+  left: $spacing-unit;
+}
+
 /**
  * Site header
  */
@@ -106,7 +119,6 @@
  * Site footer
  */
 .site-footer {
-  border-top: 1px solid $grey-color-light;
   padding: $spacing-unit 0;
 }
 
@@ -217,12 +229,12 @@
 }
 
 .post-title {
-  @include relative-font-size(2.625);
-  letter-spacing: -1px;
+  @include relative-font-size(2.5);
   line-height: 1;
+  color: $brand-color;
 
   @include media-query($on-laptop) {
-    @include relative-font-size(2.25);
+    @include relative-font-size(2.7);
   }
 }
 
