--- a/_sass/safari/_home.scss
+++ b/_sass/safari/_home.scss
@@ -23,3 +23,7 @@
 #safari--cover .safari--description blockquote {
   font-size: $big-font-size;
 }
+
+#safari--partners {
+  margin-bottom: $spacing-unit * 2;
+}
