--- a/_sass/safari.scss
+++ b/_sass/safari.scss
@@ -2,14 +2,14 @@
 
 // Define defaults for each variable.
 
-$base-font-family: "Duospace", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: "Times New Roman", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $base-font-size:   16px !default;
 $base-font-weight: normal !default;
 $small-font-size:  $base-font-size * 1.2 !default;
 $big-font-size:    $base-font-size * 1.4 !default;
 $base-line-height: 1.5 !default;
 
-$title-font-family: "HK Grotesk", "Times New Roman", serif !default;
+$title-font-family: "Helvetica", "Times New Roman", serif !default;
 $title-font-weight: 400 !default;
 
 $spacing-unit:     30px !default;
