--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -7,8 +7,8 @@
   text-align: center;
   z-index: 9999;
   position: fixed;
-  top: $spacing-unit;
-  left: $spacing-unit;
+  top: $spacing-unit / 2;
+  left: $spacing-unit / 2;
 }
 
 /**
@@ -230,8 +230,10 @@
 
 .post-title {
   @include relative-font-size(2.5);
+  text-align: center;
   line-height: 1;
   color: $brand-color;
+  margin-top: $spacing-unit * 2;
 
   @include media-query($on-laptop) {
     @include relative-font-size(2.7);
@@ -262,6 +264,15 @@
 
     @include media-query($on-laptop) {
       @include relative-font-size(1.125);
+    }
+  }
+
+  p {
+    text-indent: $spacing-unit;
+    @include relative-font-size(1.3);
+
+    @include media-query($on-laptop) {
+      @include relative-font-size(1.2);
     }
   }
 }
