--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,13 +3,7 @@ layout: default
 ---
 
 <div id="safari--cover">
-  <div class="safari--description">
-
-  </div>
-</div>
-
-<div id="safari--partners">
-  {{ content }}
+  <h1>SAFARI NJEMA</h1>
 </div>
 
 <div class="home">
@@ -17,25 +11,26 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
-  {%- if site.questions.size > 0 -%}
-    <ul class="post-list">
-      {%- for question in site.questions -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ question.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ question.url | relative_url }}">
-            {{ question.title | escape }}
-          </a>
-        </h3>
-        <p>
-          {{ question.excerpt }}
-        </p>
-      </li>
-      {%- endfor -%}
-    </ul>
+  {{ content }}
 
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-  {%- endif -%}
+  <a href="{{ "/about/" | relative_url }}"><button>Read more about the project</button></a>
 
+  <div id="index">
+    {%- if site.questions.size > 0 -%}
+      <ul class="post-list">
+        {%- for question in site.questions -%}
+        <li>
+          <h3>
+            <a class="post-link" href="{{ question.url | relative_url }}">
+              {{ question.title | escape }}
+            </a>
+          </h3>
+          <p>
+            {{ question.author }}
+          </p>
+        </li>
+        {%- endfor -%}
+      </ul>
+    {%- endif -%}
+  </div>
 </div>
