--- a/_sass/safari.scss
+++ b/_sass/safari.scss
@@ -2,14 +2,14 @@
 
 // Define defaults for each variable.
 
-$base-font-family: "Times New Roman", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: "Duospace", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $base-font-size:   16px !default;
 $base-font-weight: normal !default;
-$small-font-size:  $base-font-size * 1.2 !default;
+$small-font-size:  $base-font-size * 1 !default;
 $big-font-size:    $base-font-size * 1.4 !default;
 $base-line-height: 1.5 !default;
 
-$title-font-family: "Helvetica", "Times New Roman", serif !default;
+$title-font-family: "HK Grotesk", "Helvetica", "Arial", serif !default;
 $title-font-weight: 400 !default;
 
 $spacing-unit:     30px !default;
@@ -20,15 +20,15 @@ $brand-color:      #115659 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($background-color, 5%) !default;
-$grey-color-dark:  darken($background-color, 20%) !default;
+$grey-color-dark:  darken($background-color, 10%) !default;
 
 $table-text-align: left !default;
 
 // Width of the content area
 $content-width:    1140px !default;
 
-$on-palm:          95% !default;
-$on-laptop:        1140px !default;
+$on-palm:          768px !default;
+$on-laptop:        1200px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
