--- a/_sass/safari/_base.scss
+++ b/_sass/safari/_base.scss
@@ -8,7 +8,24 @@ dl, dd, ol, ul, figure {
   padding: 0;
 }
 
+button {
+  background: $grey-color-light;
+  padding: $spacing-unit / 3 $spacing-unit;
+  border-radius: $spacing-unit;
+  border: 1px solid $brand-color;
+  color: $brand-color;
+  font-family: $base-font-family;
+  font-size: $small-font-size;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: all .3s ease;
+}
 
+button:hover {
+  cursor: pointer;
+  background: $brand-color;
+  color: $background-color;
+}
 
 /**
  * Basic styling
@@ -16,7 +33,7 @@ dl, dd, ol, ul, figure {
 body {
   font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
   color: $text-color;
-  background-color: $background-color;
+  background-color: $grey-color-light;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
      -moz-font-feature-settings: "kern" 1;
@@ -130,7 +147,7 @@ a {
  * Blockquotes
  */
 blockquote {
-  @include relative-font-size(1.5);
+  @include relative-font-size(1.3);
   font-style: italic;
 
   > :last-child {
