--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -3,7 +3,7 @@
 */
 
 #nav {
-  color: $grey-color-light;
+  color: $brand-color;
   text-align: center;
   z-index: 9999;
   position: fixed;
@@ -214,13 +214,6 @@
   color: $grey-color;
 }
 
-.post-link {
-  display: block;
-  @include relative-font-size(1.5);
-}
-
-
-
 /**
  * Posts
  */
@@ -269,10 +262,10 @@
 
   p {
     text-indent: $spacing-unit;
-    @include relative-font-size(1.3);
+    @include relative-font-size(1.2);
 
     @include media-query($on-laptop) {
-      @include relative-font-size(1.2);
+      @include relative-font-size(1.1);
     }
   }
 }
