--- a/_sass/fonts.css
+++ b/_sass/fonts.css
@@ -31,3 +31,9 @@
     src: url('./fonts/HKGrotesk-Regular.woff2') format('woff2');
     font-weight: 400;
 }
+
+@font-face {
+    font-family: 'HK Grotesk';
+    src: url('./fonts/HKGrotesk-Bold.woff2') format('woff2');
+    font-weight: 700;
+}
