--- a/_layouts/visualization.html
+++ b/_layouts/visualization.html
@@ -3,6 +3,10 @@ layout: default
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
+  <main class="question__visualization">
+    {% include_relative {{ page.number | prepend: "visualizations/visualization0" | append: ".html" }} %}
+  </main>
+
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
   </header>
