--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -222,14 +222,17 @@
 }
 
 .post-title {
-  @include relative-font-size(2.5);
-  text-align: center;
-  line-height: 1;
+  @include relative-font-size(3);
+  line-height: 1.3;
   color: $brand-color;
+  font-weight: 700;
   margin-top: $spacing-unit * 2;
+  margin-bottom: $spacing-unit * 3;
+  width: 70%;
 
   @include media-query($on-laptop) {
-    @include relative-font-size(2.7);
+    width: 100%;
+    @include relative-font-size(3.1);
   }
 }
 
