--- a/_sass/safari/_question.scss
+++ b/_sass/safari/_question.scss
@@ -1,4 +1,5 @@
 .question__visualization {
+  grid-column: 1 / 5;
   background: $background-color;
   border-top: 1px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-dark;
