--- a/_layouts/visualization.html
+++ b/_layouts/visualization.html
@@ -3,13 +3,14 @@ layout: default
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
+  <header class="post-header">
+    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <p>by {{ page.author }}</p>
+  </header>
+
   <main class="question__visualization">
     {% include_relative {{ page.number | prepend: "visualizations/visualization0" | append: ".html" }} %}
   </main>
-
-  <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-  </header>
 
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
