--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -113,7 +113,64 @@
   }
 }
 
+/**
+ * About
+ */
 
+#methodology {
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+
+  .page-heading {
+    grid-column: 1 / 1;
+    margin-top: $spacing-unit;
+  }
+
+  .methodology--content {
+    @include relative-font-size(1);
+    grid-column: 2 / 4;
+    margin: $spacing-unit * 1.5 0;
+  }
+
+  .safari--partners {
+    grid-column: 1 / 4;
+  }
+}
+
+.safari--partners {
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  grid-template-rows: 1fr;
+  margin: $spacing-unit * 2 0;
+
+  h2 {
+    @include relative-font-size(1.8);
+    grid-column: 1 / 1;
+    grid-row: span 4;
+  }
+
+  .safari--departments {
+    grid-column: 2 / span 2;
+    h3 {
+      @include relative-font-size(1.3);
+      padding-top: $spacing-unit / 2.5;
+      border-top: 1px solid $grey-color-dark;
+    }
+  }
+
+  div {
+    grid-column: span 1;
+    margin-bottom: $spacing-unit;
+
+    p {
+      margin: 0;
+    }
+  }
+
+  img {
+    height: 90px;
+  }
+}
 
 /**
  * Site footer
@@ -222,7 +279,7 @@
 }
 
 .post-title {
-  @include relative-font-size(3);
+  @include relative-font-size(2);
   line-height: 1.3;
   color: $brand-color;
   font-weight: 700;
@@ -237,7 +294,13 @@
 }
 
 .post-content {
+  display: grid;
+  grid-template-columns: repeat(5, 20%);
   margin-bottom: $spacing-unit;
+
+  h1, h2, h3, h4, p, blockquote {
+    grid-column: 2 / 6;
+  }
 
   h2 {
     @include relative-font-size(2);
@@ -264,11 +327,18 @@
   }
 
   p {
-    text-indent: $spacing-unit;
-    @include relative-font-size(1.2);
+    @include relative-font-size(1.1);
 
     @include media-query($on-laptop) {
       @include relative-font-size(1.1);
     }
+  }
+
+  blockquote p {
+    @include relative-font-size(1.5);
+  }
+
+  .footnotes {
+    grid-column: 1 / 4;
   }
 }
