--- a/_sass/safari/_question.scss
+++ b/_sass/safari/_question.scss
@@ -8,6 +8,7 @@
   left: calc(-50vw + 50%);
   margin-top: $spacing-unit * 2;
   margin-bottom: $spacing-unit * 2;
+  padding: $spacing-unit 0;
 }
 
 .post-content > blockquote {
