--- a/_sass/safari.scss
+++ b/_sass/safari.scss
@@ -14,9 +14,10 @@ $title-font-weight: 400 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
+$text-color:       #333333 !default;
 $background-color: #D0CDD7 !default;
-$brand-color:      #115659 !default;
+// $brand-color:      #115659 !default;
+$brand-color:      #0000e3 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($background-color, 5%) !default;
