--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,1 +1,7 @@
-<a href="{{ "/" | relative_url }}"><div id="nav">Home - {{ site.title }}</div></a>
+<div id="nav">
+  <div class="wrapper">
+    <a href="{{ "/" | relative_url }}"><button id="home">{{ site.title }}</button></a>
+    <a href="{{ "/about/" | relative_url }}"><button>About</button></a>
+    <a href="http://www.polisocial.polimi.it/en/projects/" target="_blank"><button id="polisocial">Polisocial</button></a>
+  </div>
+</div>
