--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,16 +5,19 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p>by {{ page.author }}</p>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    {{ content }}
+    <aside class="post-meta">
+      <h4>Authors</h4>
+      <p>{{ page.authors }}</p>
+      <h4>Department</h4>
+      <p>{{ page.department }}</p>
+    </aside>
+    <div class="main-post-content">
+      {{ content }}
+    </div>
   </div>
-
-  {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
-  {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
