--- a/_sass/safari/_base.scss
+++ b/_sass/safari/_base.scss
@@ -1,6 +1,7 @@
 /**
  * Reset some basic elements
  */
+
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
@@ -60,7 +61,7 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: $spacing-unit;
 }
 
 
@@ -117,6 +118,7 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
+  color: $brand-color;
   font-family: $title-font-family;
   font-weight: $title-font-weight;
 }
