--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -4,25 +4,34 @@
 
 #nav {
   color: $brand-color;
-  text-align: center;
   z-index: 9999;
-  position: fixed;
-  top: $spacing-unit / 2;
-  left: $spacing-unit / 2;
+  position: sticky;
+  height: 41px;
+  width: 100%;
+  top: 0;
+  padding: $spacing-unit / 2 0;
+  border-top: 1px solid $brand-color;
+
+  button {
+    @include relative-font-size(1.1);
+    font-family: $title-font-family;
+    text-transform: none;
+  }
+
+  #home {
+    background: $brand-color;
+    color: $grey-color-light;
+    border-color: darken($brand-color, 15%);
+  }
+
+  #polisocial {
+    float: right;
+  }
 }
 
 /**
  * Site header
  */
-.site-header {
-  border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-light;
-  min-height: $spacing-unit * 1.865;
-
-  // Positioning context for the mobile navigation icon
-  position: relative;
-}
-
 .site-title {
   @include relative-font-size(1.625);
   font-weight: 300;
@@ -279,13 +288,17 @@
 }
 
 .post-title {
-  @include relative-font-size(2);
-  line-height: 1.3;
-  color: $brand-color;
+  @include relative-font-size(4);
+  line-height: 1.1;
+  -webkit-font-smoothing: none;
+  -moz-osx-font-smoothing: none;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: $brand-color;
+  color: #FFFFFF;
   font-weight: 700;
-  margin-top: $spacing-unit * 2;
-  margin-bottom: $spacing-unit * 3;
-  width: 70%;
+  margin-top: $spacing-unit * 1.5;
+  margin-bottom: $spacing-unit * 2;
+  width: 80%;
 
   @include media-query($on-laptop) {
     width: 100%;
@@ -295,50 +308,110 @@
 
 .post-content {
   display: grid;
-  grid-template-columns: repeat(5, 20%);
+  grid-template-columns: repeat(6, 16%);
+  grid-template-rows: 1fr;
+  border-top: 1px solid $grey-color-dark;
+  border-bottom: 1px solid $grey-color-dark;
   margin-bottom: $spacing-unit;
 
-  h1, h2, h3, h4, p, blockquote {
-    grid-column: 2 / 6;
+  h1, h2, h3, h4 {
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: $spacing-unit / 2;
+    margin-top: $spacing-unit;
   }
 
-  h2 {
-    @include relative-font-size(2);
+  aside {
+    padding: $spacing-unit 0;
+    grid-column: 1 / 3;
+    grid-row: 1 / span 1000;
+    padding-right: $spacing-unit;
+    margin-right: $spacing-unit;
+    border-right: 1px solid $grey-color-dark;
 
-    @include media-query($on-laptop) {
-      @include relative-font-size(1.75);
+    h4 {
+      margin-bottom: $spacing-unit / 2.5;
+      font-weight: 700;
+      text-transform: uppercase;
+      @include relative-font-size(1);
+    }
+
+    p {
+      color: $text-color;
+      font-family: $title-font-family;
+      @include relative-font-size(1);
     }
   }
 
-  h3 {
-    @include relative-font-size(1.625);
+  .main-post-content {
+    grid-column: 3 / 7;
+    padding-top: $spacing-unit;
 
-    @include media-query($on-laptop) {
-      @include relative-font-size(1.375);
+    blockquote {
+      @include relative-font-size(1);
+    }
+
+    h2 {
+      @include relative-font-size(1.5);
+
+      @include media-query($on-laptop) {
+        @include relative-font-size(1.75);
+      }
+    }
+
+    h3 {
+      @include relative-font-size(1.3);
+
+      @include media-query($on-laptop) {
+        @include relative-font-size(1.375);
+      }
+    }
+
+    h4 {
+      @include relative-font-size(1.25);
+
+      @include media-query($on-laptop) {
+        @include relative-font-size(1.125);
+      }
+    }
+
+    p {
+      @include relative-font-size(1);
+
+      @include media-query($on-laptop) {
+        @include relative-font-size(1);
+      }
+    }
+
+    blockquote p {
+      @include relative-font-size(1.2);
+      line-height: 1.2;
+    }
+
+    .footnotes {
+      grid-column: 1 / 4;
+      margin-bottom: 0;
     }
   }
 
-  h4 {
-    @include relative-font-size(1.25);
-
-    @include media-query($on-laptop) {
-      @include relative-font-size(1.125);
-    }
-  }
-
-  p {
+  #markdown-toc {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-family: $title-font-family;
+    font-weight: 700;
+    position: sticky;
+    top: $spacing-unit * 3;
     @include relative-font-size(1.1);
 
-    @include media-query($on-laptop) {
-      @include relative-font-size(1.1);
+    li {
+      margin-bottom: $spacing-unit / 3;
     }
-  }
 
-  blockquote p {
-    @include relative-font-size(1.5);
-  }
-
-  .footnotes {
-    grid-column: 1 / 4;
+    ul {
+      list-style: none;
+      margin-left: $spacing-unit / 2;
+      font-weight: 400;
+    }
   }
 }
