--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -391,27 +391,15 @@
     .footnotes {
       grid-column: 1 / 4;
       margin-bottom: 0;
-    }
-  }
 
-  #markdown-toc {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    font-family: $title-font-family;
-    font-weight: 700;
-    position: sticky;
-    top: $spacing-unit * 3;
-    @include relative-font-size(1.1);
+      * {
+        @include relative-font-size(0.8);
+        color: darken($brand-color, 15%);
+      }
 
-    li {
-      margin-bottom: $spacing-unit / 3;
-    }
-
-    ul {
-      list-style: none;
-      margin-left: $spacing-unit / 2;
-      font-weight: 400;
+      p {
+        color: $brand-color;
+      }
     }
   }
 }
