--- a/_sass/safari.scss
+++ b/_sass/safari.scss
@@ -3,7 +3,7 @@
 // Define defaults for each variable.
 
 $base-font-family: "Duospace", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$base-font-size:   16px !default;
+$base-font-size:   15px !default;
 $base-font-weight: normal !default;
 $small-font-size:  $base-font-size * 1 !default;
 $big-font-size:    $base-font-size * 1.4 !default;
@@ -14,14 +14,22 @@ $title-font-weight: 400 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #333333 !default;
-$background-color: #D0CDD7 !default;
+// $text-color:       #333333 !default;
+// $background-color: #D0CDD7 !default;
 // $brand-color:      #115659 !default;
-$brand-color:      #0000e3 !default;
+// $brand-color:      #0000e3 !default;
 
-$grey-color:       #828282 !default;
-$grey-color-light: lighten($background-color, 5%) !default;
-$grey-color-dark:  darken($background-color, 10%) !default;
+$text-color:       #D9D9D9;
+$background-color: #111111;
+$brand-color:      #FFFF00;
+
+// $text-color: darken(peachpuff, 80%);
+// $background-color: peachpuff;
+// $brand-color: #ff009c;
+
+$grey-color:       #333333 !default;
+$grey-color-light: lighten($grey-color, 10%) !default;
+$grey-color-dark:  darken($grey-color, 10%) !default;
 
 $table-text-align: left !default;
 
