--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -20,7 +20,7 @@
 
   #home {
     background: $brand-color;
-    color: $grey-color-light;
+    color: $background-color;
     border-color: darken($brand-color, 15%);
   }
 
@@ -128,21 +128,37 @@
 
 #methodology {
   display: grid;
-  grid-template-columns: repeat(3, 33%);
+  grid-template-columns: repeat(6, 16.7%);
+  border-top: 1px solid $grey-color-light;
+  border-bottom: 1px solid $grey-color-light;
 
   .page-heading {
-    grid-column: 1 / 1;
-    margin-top: $spacing-unit;
+    grid-column: 1 / 3;
+    padding-top: $spacing-unit;
+    margin-right: $spacing-unit;
+    border-right: 1px solid $grey-color-light;
+
+    @include media-query($on-laptop) {
+      grid-column: 1 / span 6;
+      margin-right: 0;
+      padding-bottom: $spacing-unit;
+      border-right: none;
+      border-bottom: 1px solid $grey-color-light;
+    }
   }
 
   .methodology--content {
     @include relative-font-size(1);
-    grid-column: 2 / 4;
+    grid-column: 3 / 7;
     margin: $spacing-unit * 1.5 0;
+
+    @include media-query($on-laptop) {
+      grid-column: 1 / span 6;
+    }
   }
 
   .safari--partners {
-    grid-column: 1 / 4;
+    grid-column: 1 / 7;
   }
 }
 
@@ -153,23 +169,41 @@
   margin: $spacing-unit * 2 0;
 
   h2 {
-    @include relative-font-size(1.8);
+    @include relative-font-size(1.2);
+    font-weight: 700;
+    text-transform: uppercase;
     grid-column: 1 / 1;
     grid-row: span 4;
   }
 
+  @include media-query($on-laptop) {
+    .safari--logos {
+      grid-column: span 1;
+    }
+  }
+
   .safari--departments {
     grid-column: 2 / span 2;
+
+    @include media-query($on-laptop) {
+      grid-column: 1 / span 3;
+    }
+
     h3 {
       @include relative-font-size(1.3);
       padding-top: $spacing-unit / 2.5;
-      border-top: 1px solid $grey-color-dark;
+      border-top: 1px solid $grey-color-light;
+      color: $text-color;
     }
   }
 
   div {
     grid-column: span 1;
     margin-bottom: $spacing-unit;
+
+    @include media-query($on-laptop) {
+      grid-column: 1 / span 3;
+    }
 
     p {
       margin: 0;
@@ -201,7 +235,7 @@
 
 .footer-col-wrapper {
   @include relative-font-size(0.9375);
-  color: $grey-color;
+  color: $grey-color-light;
   margin-left: -$spacing-unit / 2;
   @extend %clearfix;
 }
@@ -294,7 +328,7 @@
   -moz-osx-font-smoothing: none;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: $brand-color;
-  color: #FFFFFF;
+  color: $background-color;
   font-weight: 700;
   margin-top: $spacing-unit * 1.5;
   margin-bottom: $spacing-unit * 2;
@@ -308,10 +342,10 @@
 
 .post-content {
   display: grid;
-  grid-template-columns: repeat(6, 16%);
+  grid-template-columns: repeat(6, 16.7%);
   grid-template-rows: 1fr;
-  border-top: 1px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-dark;
+  border-top: 1px solid $grey-color-light;
+  border-bottom: 1px solid $grey-color-light;
   margin-bottom: $spacing-unit;
 
   h1, h2, h3, h4 {
@@ -327,9 +361,18 @@
     grid-row: 1 / span 1000;
     padding-right: $spacing-unit;
     margin-right: $spacing-unit;
-    border-right: 1px solid $grey-color-dark;
+    border-right: 1px solid $grey-color-light;
+
+    @include media-query($on-laptop) {
+      grid-column: 1 / 7;
+      grid-row: 1 / 1;
+      margin-right: 0;
+      border-right: 0;
+      border-bottom: 1px solid $grey-color-light;
+    }
 
     h4 {
+      margin-top: 0;
       margin-bottom: $spacing-unit / 2.5;
       font-weight: 700;
       text-transform: uppercase;
@@ -347,15 +390,25 @@
     grid-column: 3 / 7;
     padding-top: $spacing-unit;
 
+    @include media-query($on-laptop) {
+      grid-column: 1 / 7;
+    }
+
+    p {
+      margin-bottom: $spacing-unit * 2;
+    }
+
     blockquote {
       @include relative-font-size(1);
     }
 
     h2 {
-      @include relative-font-size(1.5);
+      @include relative-font-size(1.3);
+      margin-top: 0;
+      margin-bottom: $spacing-unit;
 
       @include media-query($on-laptop) {
-        @include relative-font-size(1.75);
+        @include relative-font-size(1.4);
       }
     }
 
