--- a/_sass/safari/_question.scss
+++ b/_sass/safari/_question.scss
@@ -1,13 +1,13 @@
 .question__visualization {
   grid-column: 1 / 5;
-  background: $background-color;
-  border-top: 1px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-dark;
-  width: 100vw;
-  position: relative;
-  left: calc(-50vw + 50%);
+  // background: $grey-color-dark;
+  border-top: 1px solid $grey-color-light;
+  // border-bottom: 1px solid $grey-color-light;
+  // width: 100vw;
+  // position: relative;
+  // left: calc(-50vw + 50%);
   margin-top: $spacing-unit * 2;
-  margin-bottom: $spacing-unit * 2;
+  // margin-bottom: $spacing-unit * 2;
   padding: $spacing-unit 0;
 }
 
