--- a/_sass/safari.scss
+++ b/_sass/safari.scss
@@ -19,7 +19,7 @@ $spacing-unit:     30px !default;
 // $brand-color:      #115659 !default;
 // $brand-color:      #0000e3 !default;
 
-$text-color:       #D9D9D9;
+$text-color:       #DFDFDF;
 $background-color: #111111;
 $brand-color:      #FFFF00;
 
@@ -27,7 +27,7 @@ $brand-color:      #FFFF00;
 // $background-color: peachpuff;
 // $brand-color: #ff009c;
 
-$grey-color:       #333333 !default;
+$grey-color:       #555555 !default;
 $grey-color-light: lighten($grey-color, 10%) !default;
 $grey-color-dark:  darken($grey-color, 10%) !default;
 
