--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -21,7 +21,7 @@
   #home {
     background: $brand-color;
     color: $background-color;
-    border-color: darken($brand-color, 15%);
+    border-color: #0000e3;
   }
 
   #polisocial {
@@ -324,11 +324,7 @@
 .post-title {
   @include relative-font-size(4);
   line-height: 1.1;
-  -webkit-font-smoothing: none;
-  -moz-osx-font-smoothing: none;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: $brand-color;
-  color: $background-color;
+  color: $text-color;
   font-weight: 700;
   margin-top: $spacing-unit * 1.5;
   margin-bottom: $spacing-unit * 2;
