--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -19,9 +19,9 @@
   }
 
   #home {
-    background: $brand-color;
-    color: $background-color;
-    border-color: #0000e3;
+    background: $background-color;
+    color: #FF0000;
+    border-color: #FF0000;
   }
 
   #polisocial {
