--- a/_sass/safari/_question.scss
+++ b/_sass/safari/_question.scss
@@ -1,7 +1,7 @@
 .question__visualization {
   grid-column: 1 / 5;
   // background: $grey-color-dark;
-  border-top: 1px solid $grey-color-light;
+  border-top: 1px solid $grey-color-dark;
   // border-bottom: 1px solid $grey-color-light;
   // width: 100vw;
   // position: relative;
