--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -73,7 +73,7 @@
     top: 9px;
     right: $spacing-unit / 2;
     background-color: $background-color;
-    border: 1px solid $grey-color-light;
+    border: 1px solid $grey-color-dark;
     border-radius: 5px;
     text-align: right;
 
@@ -129,21 +129,21 @@
 #methodology {
   display: grid;
   grid-template-columns: repeat(6, 16.7%);
-  border-top: 1px solid $grey-color-light;
-  border-bottom: 1px solid $grey-color-light;
+  border-top: 1px solid $grey-color-dark;
+  border-bottom: 1px solid $grey-color-dark;
 
   .page-heading {
     grid-column: 1 / 3;
     padding-top: $spacing-unit;
     margin-right: $spacing-unit;
-    border-right: 1px solid $grey-color-light;
+    border-right: 1px solid $grey-color-dark;
 
     @include media-query($on-laptop) {
       grid-column: 1 / span 6;
       margin-right: 0;
       padding-bottom: $spacing-unit;
       border-right: none;
-      border-bottom: 1px solid $grey-color-light;
+      border-bottom: 1px solid $grey-color-dark;
     }
   }
 
@@ -192,7 +192,7 @@
     h3 {
       @include relative-font-size(1.3);
       padding-top: $spacing-unit / 2.5;
-      border-top: 1px solid $grey-color-light;
+      border-top: 1px solid $grey-color-dark;
       color: $text-color;
     }
   }
@@ -340,8 +340,8 @@
   display: grid;
   grid-template-columns: repeat(6, 16.7%);
   grid-template-rows: 1fr;
-  border-top: 1px solid $grey-color-light;
-  border-bottom: 1px solid $grey-color-light;
+  border-top: 1px solid $grey-color-dark;
+  border-bottom: 1px solid $grey-color-dark;
   margin-bottom: $spacing-unit;
 
   h1, h2, h3, h4 {
@@ -357,14 +357,14 @@
     grid-row: 1 / span 1000;
     padding-right: $spacing-unit;
     margin-right: $spacing-unit;
-    border-right: 1px solid $grey-color-light;
+    border-right: 1px solid $grey-color-dark;
 
     @include media-query($on-laptop) {
       grid-column: 1 / 7;
       grid-row: 1 / 1;
       margin-right: 0;
       border-right: 0;
-      border-bottom: 1px solid $grey-color-light;
+      border-bottom: 1px solid $grey-color-dark;
     }
 
     h4 {
