--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,9 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
-  {{ content }}
+  <div class="home-content">
+    {{ content }}
+  </div>
 
   <a href="{{ "/about/" | relative_url }}"><button>Read more about the project</button></a>
   <a href="https://youtu.be/sliSRdTTFGg" target="_blank"><button>Watch the video</button></a>
