--- a/_sass/safari/_home.scss
+++ b/_sass/safari/_home.scss
@@ -111,5 +111,9 @@
     column-count: 2;
     column-gap: $spacing-unit;
     margin-bottom: $spacing-unit * 2;
+
+    @include media-query($on-palm) {
+      column-count: 1;
+    }
   }
 }
