--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <div id="safari--cover">
   <div>
     <h1 class="post-title">SAFARI NJEMA</h1>
-    <h2>Supporting mobility policies throught Big Data Analysis</h2>
+    <h2>Supporting mobility policies through Big Data Analysis</h2>
   </div>
 </div>
 
