--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -216,6 +216,75 @@
   }
 }
 
+#datasets {
+  border-top: 1px solid $grey-color-dark;
+  display: grid;
+  grid-template-columns: repeat(6, 16.7%);
+
+  .page-heading {
+    grid-column: 1 / 3;
+    padding-top: $spacing-unit;
+    margin-right: $spacing-unit;
+    border-right: 1px solid $grey-color-dark;
+
+    @include media-query($on-laptop) {
+      grid-column: 1 / span 6;
+      margin-right: 0;
+      padding-bottom: $spacing-unit;
+      border-right: none;
+      border-bottom: 1px solid $grey-color-dark;
+    }
+  }
+
+  .methodology--content {
+    @include relative-font-size(1);
+    grid-column: 3 / 7;
+    margin: $spacing-unit * 1.5 0;
+
+    @include media-query($on-laptop) {
+      grid-column: 1 / span 6;
+    }
+  }
+
+  #index {
+    @include relative-font-size(1);
+    grid-column: 1 / span 6;
+
+    .data-list {
+      width: 100%;
+      flex-wrap: wrap;
+      margin: auto;
+    }
+
+    .data-list > li:first-child {
+      border-top: 1px solid $grey-color-dark;
+    }
+
+    .data-list > li {
+      display: flex;
+      padding: $spacing-unit / 1.5 0;
+      background-position: center;
+      background-size: 50%;
+      background-repeat: no-repeat;
+      margin-bottom: 0;
+      border-bottom: 1px solid $grey-color-dark;
+      @include media-query($on-palm) {
+        padding: $spacing-unit / 2 0;
+        display: block;
+      }
+      @include relative-font-size(1);
+    }
+
+    .data-list > li > * {
+      width: 50%;
+      margin-bottom: 0;
+      @include media-query($on-palm) {
+       width: 100%;
+      }
+    }
+  }
+}
+
 /**
  * Site footer
  */
