--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,7 @@
 <div id="nav">
   <div class="wrapper">
-    <a href="{{ "/" | relative_url }}"><button id="home">{{ site.title }}</button></a>
-    <a href="{{ "/about/" | relative_url }}"><button>About</button></a>
+    <a href="{{ "/" | relative_url }}"><div id="home">{{ site.title }}</div></a>
+    <a href="{{ "/about/" | relative_url }}"><div>Methodology</div></a>
+    <a href="{{ "/data/" | relative_url }}"><div>Data</div></a>
   </div>
 </div>
