layout fix, wording

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: default
   <a href="https://youtu.be/sliSRdTTFGg" target="_blank"><button>Watch the video</button></a>
 
   <div id="index">
-    <h2>Research insights</h2>
+    <h2>Research analyses</h2>
     {%- if site.questions.size > 0 -%}
       <ul class="post-list">
         {%- for question in site.questions -%}
