--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,8 @@
 <div id="nav">
   <div class="wrapper">
     <a href="{{ "/" | relative_url }}"><div id="home">{{ site.title }}</div></a>
-    <a href="{{ "/about/" | relative_url }}"><div>Methodology</div></a>
+    <a href="{{ "/mission/" | relative_url }}"><div>Mission</div></a>
+    <a href="{{ "/team/" | relative_url }}"><div>Team</div></a>
     <a href="{{ "/data/" | relative_url }}"><div>Data</div></a>
   </div>
 </div>
