--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -1,7 +1,10 @@
 ---
 layout: default
 ---
-
+<script
+			  src="https://code.jquery.com/jquery-3.5.1.min.js"
+			  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+			  crossorigin="anonymous"></script>
 <div id="datasets" class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
@@ -11,23 +14,30 @@ layout: default
 
   <div id="index">
     {%- if site.questions.size > 0 -%}
+    {% assign questions = site.questions | sort: 'type' %}
       <ul class="data-list">
-        {%- for question in site.questions -%}
-        <li>
-          <p>
-            {{ question.data-description }}
-          </p>
-          <h4>
-            <a class="data-link" href="{{ question.url | relative_url }}">{{ question.title }}</a>
-          </h4>
-          <p>
-            <a class="data-link" href="{{ question.data | relative_url }}">
-              {{ question.data | escape }}
-            </a>
-          </p>
-        </li>
+        {%- for question in questions -%}
+          {%- for source in question.sources -%}
+
+            <li id="{{ source.link }}">
+              <p>
+                {{ source.name }}
+              </p>
+              <h4>
+                <a class="data-link" href="{{ question.url | relative_url }}">{{ question.title }}</a>
+              </h4>
+              <p>
+                <a class="data-link" href="{{ question.link | relative_url }}">
+                  {{ source.link | escape }}
+                </a>
+              </p>
+            </li>
+          {%- endfor -%}
         {%- endfor -%}
       </ul>
     {%- endif -%}
   </div>
 </div>
+<script>
+  console.log({{ items | jsonify }})
+  </script>
