--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-<title>{{ page.title }}</title>
+<title>{{ page.title }} - Safari Njema</title>
 
   {%- include head.html -%}
 
