--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -34,4 +34,23 @@ layout: default
       </div>
     {%- endfor -%}
   </div>
+
+  <div id="index">
+    {%- if site.questions.size > 0 -%}
+    {% assign questions = site.questions | sort: 'type' %}
+      <ul class="data-list">
+        {%- for question in questions -%}
+					<h3><a href="{{ question.link | relative_url }}">{{ question.title }}</a></h3>
+          {%- for expertise in question.expertise -%}
+
+            <li>
+              <p>
+                {{ expertise }}
+              </p>
+            </li>
+          {%- endfor -%}
+        {%- endfor -%}
+      </ul>
+    {%- endif -%}
+  </div>
 </div>
