--- a/_layouts/visualization.html
+++ b/_layouts/visualization.html
@@ -19,13 +19,13 @@ layout: default
       <h4>Data</h4>
       <ul style="padding: 0; margin-left: 0;">
         {% for source in page.sources %}
-          <li style="border: 1px solid #ff009c; text-align: center; padding: 0.3rem 0.6rem; margin-bottom: 0.5rem; list-style: none"><a href="{{ source.link }}" target="_blank"> <p style="margin-bottom: 0">{{ source.name }}</p></a></li>
+          <li style="border: 1px solid #f5546c; text-align: center; padding: 0.3rem 0.6rem; margin-bottom: 0.5rem; list-style: none"><a href="{{ source.link }}" target="_blank"> <p style="margin-bottom: 0">{{ source.name }}</p></a></li>
         {% endfor %}
       </ul>
       <h4>Expertise</h4>
       <ul style="padding: 0; margin-left: 0;">
         {% for expertise in page.expertise %}
-          <li style="border: 1px solid #ff009c; text-align: center; padding: 0.3rem 0.6rem; margin-bottom: 0.5rem; border-radius: 100px; color: black; list-style: none;"><p style="margin-bottom: 0">{{ expertise }}</p></li>
+          <li style="border: 1px solid #f5546c; text-align: center; padding: 0.3rem 0.6rem; margin-bottom: 0.5rem; border-radius: 100px; color: black; list-style: none;"><p style="margin-bottom: 0">{{ expertise }}</p></li>
         {% endfor %}
       </ul>
       <h4>Narrative Diagram</h4>
@@ -40,7 +40,7 @@ layout: default
 </article>
 
 <div id="index" class="minified">
-  <h3>Other analyses:</h3>
+  <h3>Other outputs</h3>
   {%- if site.questions.size > 0 -%}
     <ul class="post-list">
       {%- for question in site.questions -%}
