--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -31,6 +31,7 @@
     text-transform: uppercase;
 
     color: $brand-color;
+
   }
 
   #polisocial {
@@ -139,7 +140,11 @@
   display: grid;
   grid-template-columns: repeat(6, 16.7%);
   border-top: 1px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-dark;
+
+  h3 {
+    margin-top: $spacing-unit * 1.5;
+    margin-bottom: $spacing-unit / 2;
+  }
 
   .page-heading {
     grid-column: 1 / 3;
@@ -168,6 +173,44 @@
 
   .safari--partners {
     grid-column: 1 / 7;
+  }
+
+  #index {
+    @include relative-font-size(1);
+    grid-column: 1 / span 6;
+
+    .data-list {
+      width: 100%;
+      flex-wrap: wrap;
+      margin: auto;
+    }
+
+    .data-list > li:first-child {
+      border-top: 1px solid $grey-color-dark;
+    }
+
+    .data-list > li {
+      display: flex;
+      padding: $spacing-unit / 2 0;
+      background-position: center;
+      background-size: 50%;
+      background-repeat: no-repeat;
+      margin-bottom: 0;
+      border-bottom: 1px solid $grey-color-dark;
+      @include media-query($on-palm) {
+        padding: $spacing-unit / 2 0;
+        display: block;
+      }
+      line-height: 1.2;
+    }
+
+    .data-list > li > * {
+      width: 50%;
+      margin-bottom: 0;
+      @include media-query($on-palm) {
+       width: 100%;
+      }
+    }
   }
 }
 
@@ -229,6 +272,11 @@
   border-top: 1px solid $grey-color-dark;
   display: grid;
   grid-template-columns: repeat(6, 16.7%);
+
+  h3 {
+    margin-top: $spacing-unit * 1.5;
+    margin-bottom: $spacing-unit / 2;
+  }
 
   .page-heading {
     grid-column: 1 / 3;
