--- a/_sass/safari/_home.scss
+++ b/_sass/safari/_home.scss
@@ -68,7 +68,7 @@
   font-size: $big-font-size * 0.9;
   font-family: $title-font-family;
   text-align: center;
-  color: $brand-color;
+  color: $text-color;
 
   div {
     margin-right: $spacing-unit;
