--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,15 +3,13 @@
 
   <div class="wrapper">
     <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-2">
-        <p>Polisocial Award 2018</p>
-      </div>
 
       <div class="footer-col footer-col-1">
         <img src="{{ "/assets/images/logos/polimi.svg" | relative_url }}" height="50">
       </div>
 
       <div class="footer-col footer-col-3">
+        <h3>Polisocial Award 2018</h3>
         <p>{{- site.description | escape -}}</p>
       </div>
 
