--- a/_sass/safari.scss
+++ b/_sass/safari.scss
@@ -2,14 +2,14 @@
 
 // Define defaults for each variable.
 
-$base-font-family: "Duospace", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: "Public Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $base-font-size:   15px !default;
 $base-font-weight: normal !default;
 $small-font-size:  $base-font-size * 1 !default;
-$big-font-size:    $base-font-size * 1.4 !default;
+$big-font-size:    $base-font-size * 1.3 !default;
 $base-line-height: 1.5 !default;
 
-$title-font-family: "HK Grotesk", "Helvetica", "Arial", serif !default;
+$title-font-family: "Public Sans", "Helvetica", "Arial", serif !default;
 $title-font-weight: 700 !default;
 
 $spacing-unit:     30px !default;
@@ -23,15 +23,15 @@ $spacing-unit:     30px !default;
 // $background-color: #111111;
 // $brand-color:      #FFFF00;
 
-$text-color: darken(AliceBlue, 80%);
-$background-color: lighten(AliceBlue, 5%);
+$text-color: darken(seashell, 90%);
+$background-color: lighten(seashell, 2%);
 //$brand-color: #ff009c;
-$brand-color: #f5546c;
-$link-color: lighten(adjust-hue(#f5546c, 0deg), 10%);
+$brand-color: #FF4500;
+$link-color: lighten(adjust-hue(#FF4500, 0deg), 10%);
 
-$grey-color:       AliceBlue !default;
+$grey-color:       seashell !default;
 $grey-color-light: lighten($grey-color, 10%) !default;
-$grey-color-dark:  darken($grey-color, 10%) !default;
+$grey-color-dark:  darken($grey-color, 5%) !default;
 
 $table-text-align: left !default;
 
