--- a/_sass/safari/_layout.scss
+++ b/_sass/safari/_layout.scss
@@ -3,14 +3,14 @@
 */
 
 #nav {
-  background: $background-color;
+  background: $grey-color;
   color: $brand-color;
   z-index: 9999;
   position: sticky;
   width: 100%;
   top: 0;
   padding: $spacing-unit / 2 0;
-  border-top: 1px solid $brand-color;
+  border-bottom: 1px solid $grey-color-dark;
 
   button {
     @include relative-font-size(1.1);
@@ -29,6 +29,7 @@
     font-family: $title-font-family;
     font-weight: $title-font-weight;
     text-transform: uppercase;
+    margin-right: $spacing-unit * 2;
 
     color: $brand-color;
 
@@ -207,6 +208,7 @@
     .data-list > li > * {
       width: 50%;
       margin-bottom: 0;
+      margin-right: $spacing-unit / 2;
       @include media-query($on-palm) {
        width: 100%;
       }
@@ -221,9 +223,7 @@
   margin: $spacing-unit * 2 0;
 
   h2 {
-    @include relative-font-size(1.2);
     font-weight: 700;
-    text-transform: uppercase;
     grid-column: 1 / 1;
     grid-row: span 4;
   }
@@ -335,6 +335,7 @@
     .data-list > li > * {
       width: 50%;
       margin-bottom: 0;
+      margin-right: $spacing-unit;
       @include media-query($on-palm) {
        width: 100%;
       }
@@ -449,7 +450,7 @@
 }
 
 .post-title {
-  @include relative-font-size(4);
+  @include relative-font-size(3);
   line-height: 1.1;
   color: $text-color;
   font-weight: 700;
@@ -472,7 +473,6 @@
   margin-bottom: $spacing-unit;
 
   h1, h2, h3, h4 {
-    text-transform: uppercase;
     font-weight: 700;
     margin-bottom: $spacing-unit / 2;
     margin-top: $spacing-unit;
@@ -526,20 +526,20 @@
     }
 
     h2 {
-      @include relative-font-size(1.3);
+      @include relative-font-size(1.2);
       margin-top: 0;
-      margin-bottom: $spacing-unit;
+      margin-bottom: $spacing-unit / 2;
 
       @include media-query($on-laptop) {
-        @include relative-font-size(1.4);
+        @include relative-font-size(1.3);
       }
     }
 
     h3 {
-      @include relative-font-size(1.3);
+      @include relative-font-size(1.2);
 
       @include media-query($on-laptop) {
-        @include relative-font-size(1.375);
+        @include relative-font-size(1.2);
       }
     }
 
