--- a/_sass/safari/_home.scss
+++ b/_sass/safari/_home.scss
@@ -53,6 +53,8 @@
 }
 
 .home blockquote {
+  font-style: normal;
+  
   p {
     margin-bottom: $spacing-unit / 2;
   }
@@ -64,14 +66,31 @@
 
 .home--objectives {
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: $spacing-unit * 2;
   font-size: $big-font-size * 0.9;
   font-family: $title-font-family;
   text-align: center;
   color: $text-color;
 
+  button {
+    padding: $spacing-unit / 2 $spacing-unit;
+    margin-right: $spacing-unit / 2;
+    margin-bottom: $spacing-unit / 2;
+    text-transform: none;
+    line-height: inherit;
+    @include relative-font-size(1.2);
+  }
+
   div {
-    margin-right: $spacing-unit;
+    margin-right: $spacing-unit / 2;
+    margin-bottom: $spacing-unit / 2;
+    border: 1px solid $brand-color;
+    padding: $spacing-unit / 2 $spacing-unit;
+    border-radius: $spacing-unit;
+    font-weight: $title-font-weight;
+
+    @include relative-font-size(1.2)
   }
 }
 
@@ -110,10 +129,6 @@
   @include media-query($on-palm) {
    width: 100%;
   }
-}
-
-.post-list > li::after {
-  content: "⟶";
 }
 
 .home-content {
