--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -3,43 +3,35 @@ layout: default
 ---
 
 <script
-			  src="https://code.jquery.com/jquery-3.5.1.min.js"
-			  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-			  crossorigin="anonymous"></script>
+src="https://code.jquery.com/jquery-3.5.1.min.js"
+integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+crossorigin="anonymous"></script>
 <div id="datasets" class="home">
-  {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
+	{%- if page.title -%}
+	<h1 class="page-heading">{{ page.title }}</h1>
+	{%- endif -%}
 
-  <div class="methodology--content">{{ content }}</div>
+	<div class="methodology--content">{{ content }}</div>
+	<div id="index">
+		<ul class="data-list">
+		{%- for source in site.data.datasets -%}
 
-  <div id="index">
-    {%- if site.questions.size > 0 -%}
-    {% assign questions = site.questions | sort: 'type' %}
-      <ul class="data-list">
-        {%- for question in questions -%}
-					<h3><a href="{{ question.link | relative_url }}">{{ question.title }}</a></h3>
-          {%- for source in question.sources -%}
-
-            <li id="{{ source.link }}">
-              <p>
-                	<b>{{ source.name }}</b>
-              </p>
-							<p>
-                {{ source.description }}
-              </p>
-              <p>
-                <a class="data-link" href="{{ source.link | relative_url }}" target="_blank">
-                  {{ source.link | escape }}
-                </a>
-              </p>
-            </li>
-          {%- endfor -%}
-        {%- endfor -%}
-      </ul>
-    {%- endif -%}
-  </div>
-</div>
-<script>
-  console.log({{ items | jsonify }})
-  </script>
+		<li id="{{ source.link }}">
+			<p>
+				<b>{{ source.name }}</b>
+			</p>
+			<p>
+				{{ source.description }}
+			</p>
+			<p>
+				<a class="data-link" href="{{ source.link | relative_url }}" target="_blank">
+					{{ source.link | escape }}
+				</a>
+			</p>
+		</li>
+		{%- endfor -%}
+	</ul>
+	</div>
+	<script>
+		console.log({{ items | jsonify }})
+	</script>
