--- a/_sass/safari/_base.scss
+++ b/_sass/safari/_base.scss
@@ -80,11 +80,13 @@ main {
  * Images
  */
 img {
+  display: block;
   max-width: 100%;
   vertical-align: middle;
+  border-radius: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-
 
 /**
  * Figures
