--- a/_sass/safari/_home.scss
+++ b/_sass/safari/_home.scss
@@ -54,7 +54,7 @@
 
 .home blockquote {
   font-style: normal;
-  
+
   p {
     margin-bottom: $spacing-unit / 2;
   }
@@ -79,18 +79,22 @@
     margin-bottom: $spacing-unit / 2;
     text-transform: none;
     line-height: inherit;
-    @include relative-font-size(1.2);
+    @include relative-font-size(1.3);
+  }
+
+  .fas {
+    margin-right: 0.5rem;
+    color: $brand-color;
   }
 
   div {
-    margin-right: $spacing-unit / 2;
+    margin-right: $spacing-unit;
     margin-bottom: $spacing-unit / 2;
-    border: 1px solid $brand-color;
-    padding: $spacing-unit / 2 $spacing-unit;
+    padding: $spacing-unit / 2 0;
     border-radius: $spacing-unit;
     font-weight: $title-font-weight;
 
-    @include relative-font-size(1.2)
+    @include relative-font-size(1.3)
   }
 }
 
@@ -124,8 +128,9 @@
 }
 
 .post-list > li > * {
-  width: 50%;
+  width: 33%;
   margin-bottom: 0;
+  margin-right: $spacing-unit;
   @include media-query($on-palm) {
    width: 100%;
   }
@@ -140,8 +145,6 @@
     margin-bottom: $spacing-unit * 2;
   }
   p {
-    column-count: 2;
-    column-gap: $spacing-unit;
     margin-bottom: $spacing-unit * 2;
 
     @include media-query($on-palm) {
